--- a/BioCycle/Base.lproj/LaunchScreen.xib
+++ b/BioCycle/Base.lproj/LaunchScreen.xib
@@ -27,7 +27,7 @@
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" id="mNW-ln-f7F">
                     <rect key="frame" x="0.0" y="104" width="320" height="320"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.1242290296" green="0.1350997122" blue="0.058902138159999999" alpha="1" colorSpace="calibratedRGB"/>
